excel parse works

--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-        <script type="text/javascript" src="jquery.js"></script>
-    <script src="eventSubscriptions.js" ></script>
-    <!--<script src="requester.js" ></script>-->
-    <!--<script src="custom.js" ></script>-->
-    <script src="externalLookup.js" ></script>
+    <script src="jquery.js"></script>
+    <script src="eventSubscriptions.js" ></script>    
+    <script src="externalLookup.js" ></script>    
 </head>
 
 <body>
