solved closure problem + cleanup

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <script src="jquery.js"></script>
     <script src="eventSubscriptions.js" ></script>    
-    <script src="externalLookup.js" ></script>    
+    <script src="externalLookup.js" ></script>
+    <!--<script src="test.js" ></script>-->
 </head>
 
 <body>
