--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <script src="jquery.js"></script>
     <script src="eventSubscriptions.js" ></script>    
-    <script src="externalLookup.js" ></script>
-    <!--<script src="test.js" ></script>-->
+    <script src="externalLookup.js" ></script>    
 </head>
 
 <body>
@@ -34,12 +33,18 @@
         </tr>
         <tr>
             <td>
-                <label>Enter the pause (in milliseconds) between calls (e.g. 100)</label>
+                <label>Enter the pause (in milliseconds) between calls (e.g. 500) when parsing excel</label>
             </td>
             <td>
                 <input type="number" id="requestPause" value="0" />
             </td>
         </tr>
+        <tr>
+            <td>
+                <label>Output goes to console</label>
+            </td>
+        </tr>
+        
     </table>
 </body>
 </html>
